# RepoPress

./: .gitignore  CLAUDE.md  README.md  deploy.md
server/: .gitignore  cli.py  config.py  main.py  middleware.py  models.py  pyproject.toml  repo.py  schemas.py  services.py
server/routers/: admin.py  auth.py  docs.py
server/server/: cli.py  config.py  main.py  middleware.py  models.py  repo.py  schemas.py  services.py
server/server/routers/: admin.py  auth.py  docs.py
server/static/: index.html
server/static/assets/: AdminPerms-DXh70wt0.js  AdminRepos-CZnraP1Y.js  AdminSettings-C9bIxb63.js  AdminUsers-CWEGT5DT.js  Editor-A5O9pqo7.js  Editor-B_ClxVvh.css  Login-CiKvIaxD.js  arc-DV5RTHyW.js  blockDiagram-342b154f-DHe3VR7X.js  c4Diagram-9e17e874-BVti0Pkf.js  channel-CX2YAiCz.js  classDiagram-e8fde69c-C_L-7YkH.js  classDiagram-v2-2f5103db-CIBdQQVt.js  clone-CU1WVfd6.js  createText-31840e8c-BydmCslH.js  edges-c9cd0ec5-Bi-_NKhL.js  erDiagram-0ae87a1d-pVnIhiZz.js  flowDb-99855667-DMLIn_Cx.js  flowDiagram-444f51a4-D2zUSbZj.js  flowDiagram-v2-6bf179d4-CxTpTxIB.js  flowchart-elk-definition-ecf8041a-BCBX9K6r.js  ganttDiagram-605a2065-7zptf-FW.js  gitGraphDiagram-fc1f5991-BsPIe_Qv.js  graph-DF1R0V_X.js  index-781Fl-s3.js  index-B7gw27jS.js  index-BOzM1p71.js  index-BnV1jcTx.js  index-Br_rfDTn.js  index-Bts0tcCY.js  index-ChwfLjXh.js  index-D-SJ2iqp.js  index-D-g8dQ2F.js  index-DEFm-U0M.js  index-DETWMEmp.js  index-DcKSeFoq.js  index-DrHEWeG1.js  index-Jp93-nD9.css  index-_1_CKdTf.js  index-bf99f535-BKATDYpt.js  (+24 more)
web/: index.html  package-lock.json  package.json  (+3 more)
(+23 files in other folders)
