[project]
name = "repopress-server"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "tortoise-orm[aiosqlite]>=0.20",
    "aerich>=0.7",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "pydantic-settings>=2.2",
    "cryptography>=42",
    "argon2-cffi>=23",
    "tomlkit",
]

[project.scripts]
repopress = "cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
