[project]
name = "repopress-server"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "tortoise-orm[aiosqlite]>=0.20",
    "aerich>=0.7",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2",
    "tomlkit",
]

[project.scripts]
repopress = "cli:main"

[tool.setuptools]
py-modules = [
    "__init__",
    "cli",
    "config",
    "main",
    "middleware",
    "models",
    "repo",
    "schemas",
    "services",
]
packages = ["routers"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
